test/valid/66128_nested_reassignment/nested_reassignment.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit =
    var x : Int = 0;
    var y : Int = 0;
    print((x = (y = 10; y); x))

