test/invalid-semantics/54483_assign_wrong_type/assign_wrong_type.mag
-- Author: 54483, Pedro Barata

-- Semantic error: assigning a Bool to an Int variable

fun main (_) : Unit -> Unit =
  var x : Int = 10;
  x = false;
  print(x)
